--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 
 <body>
     <div class="button-container">
-        <button class="btn" onclick="alert('Create Call clicked')">Create Call</button>
-        <button class="btn" onclick="window.location.href = 'videocall.html'">Join Call</button>
+        <button class="btn" onclick="window.location.href = 'videocall.html'">Video Chat</button>
 
         <!-- CODE Button navigates to editor.html in the same tab -->
         <button class="btn" onclick="window.location.href = 'editor.html'">Code</button>
