--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>
    VirtuTeach
   </title>
-   <link rel="icon" type="image/x-icon" href="/assets/logo.jpg">
+   <link rel="icon" type="image/x-icon" href="..../assets/logo.jpg">
   <script src="https://cdn.tailwindcss.com">
   </script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
@@ -22,13 +22,13 @@
     <header class="border-b border-gray-200">
      <nav aria-label="Top" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
       <div class="flex items-center ">
-        <img alt="logo" class="w-10 h-10 rounded-full" height="32" src="/assets/logo.jpg" width="25"/>
+        <img alt="logo" class="w-10 h-10 rounded-full" height="32" src="..../assets/logo.jpg" width="25"/>
        <span class="font-semibold text-black text-base">
         VirtuTeach
        </span>
       </div>
       <div>
-       <img alt="User avatar with dark hat and beard on dark background" class="w-8 h-8 rounded-full" height="32" src="/assets/user.png" width="32"/>
+       <img alt="User avatar with dark hat and beard on dark background" class="w-8 h-8 rounded-full" height="32" src="..../assets/user.png" width="32"/>
       </div>
      </nav>
     </header>
