--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  <body class="bg-white text-gray-900">
   <div class="min-h-screen flex flex-col justify-between">
    <div>
-    <header class="border-b border-gray-200">
+    <header class="border-b border-gray-400">
      <nav aria-label="Top" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
       <div class="flex items-center ">
         <img alt="logo" class="w-10 h-10 rounded-full" height="32" src="./assets/logo.jpg" width="25"/>
@@ -42,21 +42,21 @@
      </p>
 <section aria-label="Features" class="mt-10 grid grid-cols-1 sm:grid-cols-2 gap-4 max-w-4xl mx-auto">
   <!-- Video Chat -->
-  <a href="videocall.html" class="sm:col-span-2 group border border-gray-200 rounded-lg p-6 flex flex-col items-center justify-center text-center hover:bg-indigo-50 hover:shadow-md transition transform hover:scale-105 duration-300 cursor-pointer">
+  <a href="videocall.html" target="_blank" rel="noopener noreferrer" class="sm:col-span-2 group border border-indigo-600 rounded-lg p-6 flex flex-col items-center justify-center text-center hover:bg-indigo-200 hover:shadow-md transition transform hover:scale-105 duration-300 cursor-pointer">
     <i class="fas fa-video text-indigo-600 text-3xl mb-3 group-hover:scale-110 transition-transform duration-300"></i>
     <h2 class="font-bold text-gray-900 text-lg mb-1">Start Video Chat</h2>
     <p class="text-gray-500 text-sm max-w-xs">Connect instantly with students using live video chat.</p>
   </a>
 
   <!-- Code Editor -->
-  <a href="editor.html" class="group border border-gray-200 rounded-lg p-6 flex flex-col items-center text-center hover:bg-indigo-50 hover:shadow-md transition transform hover:scale-105 duration-300 cursor-pointer">
+  <a href="editor.html" class="group border border-indigo-600 rounded-lg p-6 flex flex-col items-center text-center hover:bg-indigo-200  hover:shadow-md transition transform hover:scale-105 duration-300 cursor-pointer">
     <i class="fas fa-code text-indigo-600 text-2xl mb-3 group-hover:scale-110 transition-transform duration-300"></i>
     <h2 class="font-semibold text-gray-900 text-base mb-1">Try the Code Editor</h2>
     <p class="text-gray-500 text-sm">Experiment with our collaborative coding environment in real-time.</p>
   </a>
 
   <!-- Whiteboard -->
-  <a href="whiteboard.html" class="group border border-gray-200 rounded-lg p-6 flex flex-col items-center text-center hover:bg-indigo-50 hover:shadow-md transition transform hover:scale-105 duration-300 cursor-pointer">
+  <a href="whiteboard.html" class="group border border-indigo-600 rounded-lg p-6 flex flex-col items-center text-center hover:bg-indigo-200 hover:shadow-md transition transform hover:scale-105 duration-300 cursor-pointer">
     <i class="fas fa-pencil-alt text-indigo-600 text-2xl mb-3 group-hover:scale-110 transition-transform duration-300"></i>
     <h2 class="font-semibold text-gray-900 text-base mb-1">Open the Whiteboard</h2>
     <p class="text-gray-500 text-sm">Start a free drawing and brainstorming session instantly.</p>
