--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     </header>
     <main class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 pt-10 pb-16">
      <h1 class="text-4xl sm:text-5xl font-extrabold text-gray-900 text-center leading-tight">
-      VirtuTeach: Connect, Code, Create.
+      VirtuTeach: Connect, Code, Learn.
      </h1>
      <p class="mt-3 text-center text-gray-500 text-sm sm:text-base max-w-xl mx-auto">
-      Empower your online teaching and learning with integrated video
-          calls, collaborative coding, and shared whiteboards.
+      Empower online teaching and learning with seamless video 
+      calls, a browser-based multilingual coding platform, and shared whiteboards.
      </p>
 <section aria-label="Features" class="mt-10 grid grid-cols-1 sm:grid-cols-2 gap-4 max-w-4xl mx-auto">
   <!-- Video Chat -->
@@ -52,7 +52,7 @@
   <a href="editor.html" class="group border border-indigo-600 rounded-lg p-6 flex flex-col items-center text-center hover:bg-indigo-200  hover:shadow-md transition transform hover:scale-105 duration-300 cursor-pointer">
     <i class="fas fa-code text-indigo-600 text-2xl mb-3 group-hover:scale-110 transition-transform duration-300"></i>
     <h2 class="font-semibold text-gray-900 text-base mb-1">Try the Code Editor</h2>
-    <p class="text-gray-500 text-sm">Experiment with our collaborative coding environment in real-time.</p>
+    <p class="text-gray-500 text-sm">Experiment with our multilingual coding environment in real-time.</p>
   </a>
 
   <!-- Whiteboard -->
