--- a/editor.html
+++ b/editor.html
@@ -4,57 +4,354 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Code Runner with Judge0</title>
+    <title>VirtuTeach</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            background-color: #ffffff;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        .container {
+            max-width: 1400px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .header {
+            padding: 20px;
+            border-radius: 12px;
+            margin-bottom: 20px;
+        }
+
+        .header h1 {
+            color: rgb(0, 0, 0);
+            font-size: 24px;
+            font-weight: 600;
+            text-align: center;
+        }
+
+        .header p {
+            color: #9ca3af;
+            text-align: center;
+        }
+
+        .main-content {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 20px;
+        }
+
+        .controls-panel {
+            background: white;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
+            border: 1px solid #e5e7eb;
+        }
+
+        .controls-row {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            flex-wrap: wrap;
+        }
+
+        .language-selector {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .language-selector label {
+            font-weight: 500;
+            color: #374151;
+        }
+
+        select {
+            padding: 10px 15px;
+            border: 2px solid #e5e7eb;
+            border-radius: 8px;
+            background: white;
+            font-size: 14px;
+            color: #374151;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            min-width: 200px;
+        }
+
+        select:hover {
+            border-color: #667eea;
+        }
+
+        select:focus {
+            outline: none;
+            border-color: #667eea;
+            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+        }
+
+        .action-buttons {
+            display: flex;
+            gap: 10px;
+            margin-left: auto;
+        }
+
+        button {
+            padding: 10px 20px;
+            border: none;
+            border-radius: 8px;
+            font-weight: 500;
+            font-size: 14px;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .btn-primary {
+            background: rgb(215, 217, 255);
+            border: 2px solid #7265ff;
+            color: rgb(10, 10, 10);
+        }
+
+        .btn-primary span {
+            color: #6a57e6;
+        }
+
+        .btn-primary:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(102, 126, 234, 0.4);
+        }
+
+        .btn-secondary {
+            background: white;
+            color: #374151;
+            border: 2px solid #e5e7eb;
+        }
+
+        .btn-secondary span {
+            color: #6a57e6;
+            font-weight: bolder;
+        }
+
+        .btn-secondary:hover {
+            background: #f9fafb;
+            border-color: #d1d5db;
+            transform: translateY(-1px);
+        }
+
+        .editor-container {
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
+            border: 1px solid #e5e7eb;
+            overflow: hidden;
+        }
+
+        .editor-header {
+            background: linear-gradient(90deg, #f8fafc 0%, #f1f5f9 100%);
+            padding: 15px 20px;
+            border-bottom: 1px solid #e5e7eb;
+            display: flex;
+            align-items: center;
+            justify-content: between;
+        }
+
+        .editor-title {
+            font-weight: 600;
+            color: #374151;
+            font-size: 16px;
         }
 
         #editor {
-            height: 300px;
-            border: 1px solid #ccc;
-            margin-bottom: 10px;
+            height: 400px;
+            border: none;
+        }
+
+        .io-section {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .input-panel,
+        .output-panel {
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
+            border: 1px solid #e5e7eb;
+            overflow: hidden;
+        }
+
+        .panel-header {
+            background: linear-gradient(90deg, #f8fafc 0%, #f1f5f9 100%);
+            padding: 15px 20px;
+            border-bottom: 1px solid #e5e7eb;
+            font-weight: 600;
+            color: #374151;
+            font-size: 16px;
+        }
+
+        .input-panel .panel-header {
+            color: rgb(0, 0, 0);
+            border-radius: 12px;
+            background: #afafff;
+            border: 1.25px solid rgb(113, 113, 255);
+        }
+
+        .output-panel .panel-header {
+            color: rgb(0, 0, 0);
+            border-radius: 12px;
+            background: #afafff;
+            border: 1.25px solid rgb(113, 113, 255);
         }
 
         textarea {
             width: 100%;
-            font-family: monospace;
+            padding: 20px;
+            border: none;
+            font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
+            font-size: 14px;
+            resize: vertical;
+            background: #fafafa;
+            color: #374151;
+            line-height: 1.5;
         }
 
-        button {
-            margin: 5px;
-            padding: 5px 10px;
+        textarea:focus {
+            outline: none;
+            background: white;
         }
 
-        select {
-            padding: 5px;
+        textarea::placeholder {
+            color: #9ca3af;
         }
 
         pre {
-            background-color: #f5f5f5;
-            padding: 10px;
-            border-radius: 4px;
+            background: #fafafa;
+            padding: 20px;
+            font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
+            font-size: 14px;
             white-space: pre-wrap;
+            word-wrap: break-word;
+            color: #374151;
+            min-height: 120px;
+            line-height: 1.5;
+        }
+
+        .loading {
+            color: #667eea;
+            font-style: italic;
+        }
+
+        .error {
+            color: #ef4444;
+            background: #fef2f2;
+            border-left: 4px solid #ef4444;
+        }
+
+        .success {
+            color: #059669;
+            background: #f0fdf4;
+            border-left: 4px solid #059669;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .container {
+                padding: 10px;
+            }
+
+            .controls-row {
+                flex-direction: column;
+                align-items: stretch;
+            }
+
+            .action-buttons {
+                margin-left: 0;
+                justify-content: center;
+            }
+
+            .io-section {
+                grid-template-columns: 1fr;
+            }
+
+            #editor {
+                height: 300px;
+            }
+        }
+
+        /* Custom scrollbar */
+        ::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        ::-webkit-scrollbar-track {
+            background: #f1f1f1;
+            border-radius: 4px;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            border-radius: 4px;
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background: linear-gradient(135deg, #5a67d8 0%, #6b46c1 100%);
         }
     </style>
 </head>
 
 <body>
+    <div class="container">
+        <div class="header">
+            <h1>Code Editor</h1>
+            <p>Write test and debug your code in real-time</p>
+        </div>
 
-    <h2>Run Code with Judge0 API</h2>
-    <select id="language" onchange="changeLanguage()"></select>
-    <button onclick="runCode()">Run</button>
-    <button onclick="saveCode()">Save Code</button>
-    <button onclick="downloadCode()">Download Code</button>
+        <div class="main-content">
+            <div class="controls-panel">
+                <div class="controls-row">
+                    <div class="language-selector">
+                        <label for="language">Language:</label>
+                        <select id="language" onchange="changeLanguage()"></select>
+                    </div>
+                    <div class="action-buttons">
+                        <button class="btn-primary" onclick="runCode()"><span>▶</span> Run Code</button>
+                        <button class="btn-secondary" onclick="saveCode()">💾 Save Code</button>
+                        <button class="btn-secondary" onclick="downloadCode()"><span>⬇</span> Download</button>
+                    </div>
+                </div>
+            </div>
 
-    <div id="editor"></div>
+            <div class="editor-container">
+                <div class="editor-header">
+                    <div class="editor-title">Code Editor</div>
+                </div>
+                <div id="editor"></div>
+            </div>
 
-    <h3>Input:</h3>
-    <textarea id="input" placeholder="Enter custom input..." rows="5"></textarea>
+            <div class="io-section">
+                <div class="input-panel">
+                    <div class="panel-header">INPUT</div>
+                    <textarea id="input" placeholder="Enter custom input for your program..." rows="6"></textarea>
+                </div>
 
-    <h3>Output:</h3>
-    <pre id="output">Waiting for code...</pre>
+                <div class="output-panel">
+                    <div class="panel-header">OUTPUT</div>
+                    <pre id="output">Ready to run your code...</pre>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Monaco Editor Loader -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.33.0/min/vs/loader.min.js"></script>
@@ -70,8 +367,14 @@
             editor = monaco.editor.create(document.getElementById("editor"), {
                 value: 'print("Hello, World!")',
                 language: "python",
-                theme: "vs-dark",
+                theme: "vs",
                 automaticLayout: true,
+                fontSize: 14,
+                lineNumbers: "on",
+                minimap: { enabled: false },
+                scrollBeyondLastLine: false,
+                wordWrap: "on",
+                fontFamily: "'Monaco', 'Menlo', 'Ubuntu Mono', monospace"
             });
         });
 
@@ -129,7 +432,10 @@
         async function runCode() {
             const sourceCode = editor.getValue();
             const stdin = document.getElementById("input").value;
-            document.getElementById("output").textContent = "Running...";
+            const outputElement = document.getElementById("output");
+
+            outputElement.textContent = "Running your code...";
+            outputElement.className = "loading";
 
             try {
                 const res = await fetch(`https://${JUDGE0_API_HOST}/submissions?base64_encoded=false&wait=true`, {
@@ -149,16 +455,20 @@
                 const result = await res.json();
 
                 if (result.stderr) {
-                    document.getElementById("output").textContent = "Error:\n" + result.stderr;
+                    outputElement.textContent = "Error:\n" + result.stderr;
+                    outputElement.className = "error";
                 } else if (result.compile_output) {
-                    document.getElementById("output").textContent = "Compilation Error:\n" + result.compile_output;
+                    outputElement.textContent = "Compilation Error:\n" + result.compile_output;
+                    outputElement.className = "error";
                 } else {
-                    document.getElementById("output").textContent = result.stdout || "No output";
+                    outputElement.textContent = result.stdout || "No output";
+                    outputElement.className = "success";
                 }
 
             } catch (err) {
                 console.error(err);
-                document.getElementById("output").textContent = "Execution failed. See console for details.";
+                outputElement.textContent = "Execution failed. Please check your internet connection and try again.";
+                outputElement.className = "error";
             }
         }
 
